tests/ui/parser/let/suggest-assoc-const.stderr
error: `let` statements are not allowed outside of functions or const blocks
  --> $DIR/suggest-assoc-const.rs:5:5
   |
LL | trait Trait {
   |             - while parsing this item list starting here
LL |     let _X: i32;
   |     ^^^
LL |
LL | }
   | - the item list ends here
   |
   = note: `let` cannot be used to define global variables
help: consider using `const` instead of `let` for associated const
   |
LL -     let _X: i32;
LL +     const _X: i32;
   |

error: aborting due to 1 previous error

